--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "worldtrip2",
+  "name": "worldtrip",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.2.6",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "framer-motion": "^7.0.0",
-    "next": "12.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swiper": "^8.3.2"
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^1.4.2",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@prismicio/client": "^4.0.0",
+    "framer-motion": "^4.1.2",
+    "next": "10.1.3",
+    "nextjs-progressbar": "^0.0.8",
+    "prismic-dom": "^2.2.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
+    "sass": "^1.32.8",
+    "swiper": "^6.5.3"
   },
   "devDependencies": {
-    "@types/node": "^18.6.5",
+    "@types/node": "^14.14.37",
     "@types/react": "^18.0.17",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
-    "typescript": "^4.7.4"
+    "typescript": "^4.2.3"
   }
 }
